[tool.poetry]
name = "sunrise"
version = "0.1.0"
description = ""
authors = ["Dan Nguyen <pedantic@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
lifxlan = "^1.2.7"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
