[project]
name = "sunrise"
version = "0.1.0"
description = ""
authors = [{ name = "Dan Nguyen", email = "pedantic@gmail.com" }]
requires-python = ">=3.10,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["lifxlan>=1.2.9"]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
sunrise = "sunrise.main:main"
fast = "sunrise.fast:main"
